typescript/checker/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments07.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in string mode
 --> $DIR/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments07.ts:3:12
  |
3 | function f(arguments) {
  |            ^^^^^^^^^

